# sieves

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.CFF  README.md  blog_post.md  codecov.yml  docs_review.md  mkdocs.yml  pyproject.toml  setup.cfg  test.py  tst.py
.github/workflows/: publish-docs.yml  test.yml
demos/: demo_chatcontrol.py
demos/crisis_tweets/: case_study.html  case_study.py
docs/: blog_post.md  doc.md  index.md
docs/engines/: base_engine.md  gliner.md
docs/examples/: crisis_tweets.md
docs/guides/: custom_tasks.md  distillation.md  getting_started.md  models.md  observability.md  optimization.md  preprocessing.md  serialization.md
docs/model_wrappers/: base_model_wrapper.md  dspy.md  gliner.md  huggingface.md  langchain.md  outlines.md
docs/tasks/: task.md
docs/tasks/predictive/: classification.md  information_extraction.md  ner.md  pii_masking.md  question_answering.md  relation_extraction.md  sentiment_analysis.md  summarization.md  translation.md
docs/tasks/preprocessing/: marker.md
examples/: create_classification_dataset.py  create_classification_dataset_with_sieves.py  demo.py  pydata_amsterdam_demo.py
examples/crisis_tweets/: case_study.ipynb
examples/use-case/: use_case.ipynb
sieves/: __init__.py  serialization.py  utils.py
sieves/data/: __init__.py  chunkers.py  doc.py  file.py  resource.py
sieves/engines/: __init__.py  core.py  dspy.py  dspy_.py  dspy_wrapper.py  engine_import.py  engine_type.py  gliner_.py  glix_.py  huggingface_.py  instructor_.py  langchain_.py  missing.py  model_type.py  ollama_.py  outlines.py  outlines_.py  outlines_engine.py  types.py  utils.py  vllm_.py  wrapper.py
sieves/interface/: core.py
sieves/model_wrappers/: __init__.py  core.py  dspy_.py  gliner_.py  huggingface_.py  langchain_.py  outlines_.py  types.py  utils.py
sieves/pipeline/: core.py
sieves/tasks/: __init__.py  chunkers.py  core.py  parsers.py  types.py  utils.py
sieves/tasks/optimization/: core.py
sieves/tasks/parsers/: core.py
sieves/tasks/postprocessing/: __init__.py
sieves/tasks/postprocessing/distillation/: __init__.py  core.py  distillation_import.py  types.py
sieves/tasks/predictive/: __init__.py  bridges.py  classification.py  consolidation.py  core.py  gliner_bridge.py  schemas.py  utils.py
sieves/tasks/predictive/classification/: __init__.py  bridges.py  core.py  engine_tasks.py  schemas.py
sieves/tasks/predictive/information_extraction/: __init__.py  bridges.py  core.py  schemas.py
sieves/tasks/predictive/ner/: __init__.py  bridges.py  core.py  schemas.py  (+1 more)
sieves/tasks/preprocessing/: __init__.py  chunkers.py  docling_.py  marker.py  marker_.py  olmocr.py  unstructured_.py
sieves/tests/: conftest.py  test_doc.py  test_engines.py  test_pipeline.py  test_serialization.py  test_strict_mode.py  utils.py
sieves/tests/docs/: test_custom_tasks.py  test_distillation.py  test_getting_started.py  test_model_wrapper_usage.py  test_optimization.py  test_pipeline_docs.py  test_readme.py  test_serialization.py
sieves/tests/engines/: test_dspy.py  test_glix.py  test_huggingface.py  test_ollama.py  test_outlines.py
sieves/tests/tasks/: docs.pkl  pipeline.yml  test_chonkie.py  test_chunking.py  test_classification.py  test_conditional_execution.py  test_distillation.py  test_docling.py  test_information_extraction.py  test_misc.py  test_ner.py  test_optimization.py  test_pii_masking.py  test_question_answering.py  test_sentiment_analysis.py  test_summarization.py  test_translation.py
(+69 files in other folders)
